# advent-of-code

./: pyproject.toml
advent/2025/: README.md
advent/2025/day_1/: README.md  main.py
advent/2025/day_2/: README.md  main.py
advent/2025/day_3/: main.py
advent/2025/day_4/: main.py
