[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
{name="Martino Mensio", email="martino.mensio@tno.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "typer>=0.20.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
]
